2008-11-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9764: added missing field in cache_sys_dmail_stat
	* Fixed bug #9767: check if PID given is numeric (Importer)
	
2008-11-20 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed: double semicolon in content type declaration if sending multiparts email
	
2008-10-29 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9580: wrong parameter type, if using nested "from other recipient lists"

2008-10-23 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug: Statistic could show wrong linked text and links.

2008-10-09	Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #9406: Filter csv import for more than 2 doublette
	* Feature: Direct Mail Engine can now be started from Gabriel.
	* Fixed bug: Format of recipient address is changed to only email for windows platform, since PHP mail function in Windows can't handle "Name <email>"
	* emconf updated: suggested extension Gabriel

2008-07-23  Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #8987: assigning categories while creating a direct mail does not work correctly

2008-07-18 Ivan Kartolo <ivan.kartolo@dkd.de>
	* Fixed bug #8982: convert linebraks to unix.
	* Feature #8721: Plaintext is compatible to DAM
	* Feature: Test Newsletter's subject will be prepended with additional subject.
	* Fixed bug #9001: added missing form name. (added to all direct_mail forms) 
	* Fixed bug #7384: don't render path, if there's no filelinks
	
2008-07-13 Ivan Kartolo <ivan.kartolo@dkd.de>
	* added UserTS to open default tab
	* manual updates
	* set required PHP to 5.x

2008-07-09 Ivan Kartolo <ivan.kartolo@dkd.de>
	* import setting can be configured by Page TSconfig (see manual)
	* Fixed: bug #8679: wrong SMTP header

2008-06-07 Ivan Kartolo <ivan.kartolo@dkd.de>
	* hide modules, if user not in Live workspace (#8470)

2008-05-05 Ivan Kartolo <ivan.kartolo@dkd.de>
	* remove keyword Public, since it's not supported in PHP 4.x
	* importer is moved to a separated class
